feat: adicionado endpoint retorno
